--- a/index.html
+++ b/index.html
@@ -520,6 +520,22 @@
                 </div>
             </div>
 
+            <!--==================== PORTFOLIO 3 ====================-->
+        
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="./packages/images/chess.png" alt="" class="portfolio__img">
+            
+                            <div class="portfolio_">
+                                <h3 class="portfolio__title">FIMA</h3>
+                                <p class="portfolio__description">FIMA is an video streaming app and is adaptable to all devices, with 
+                                    ui components and animated interactions.</p>
+                                <a href="https://fima.vercel.app/" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
                 </div>
 
             <!-- add arrows-->
