--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <!--==================== PORTFOLIO 3 ====================-->
         
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./packages/images/chess.png" alt="" class="portfolio__img">
+                            <img src="./packages/images/fima.png" alt="" class="portfolio__img">
             
                             <div class="portfolio_">
                                 <h3 class="portfolio__title">FIMA</h3>
