--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
+                        <br>
+                        <div class="about__buttons">
+                            <a download="" href="packages/pdf/Ivy's CV.pdf" class="button button--flex">
+                                Download CV<i class="uil uil-download-alt button__icon"></i>
+                            </a>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
