--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                  <div>
                      <h3 class="qualification__title">Kenya Certificate Of Primary Education</h3>
                      <span class="qualification__subtitle">Umoja Primary School, Kenya</span>
+                     <span class="qualification__subtitle">Grade attained: 339 Marks in KCPE</span>
                      <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
                         2008 - 2017
@@ -305,6 +306,7 @@
                 <div>
                     <h3 class="qualification__title">Kenya Certificate Of Secondary Education</h3>
                     <span class="qualification__subtitle">St.Teresa's Girls' - Kithimu, Kenya</span>
+                    <span class="qualification__subtitle">Grade attained: B- in KCSE</span>
                     <div class="qualification__calendar">
                        <i class="uil uil-calendar-alt"></i>
                        2018 - 2021
