--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Developer</h3>
-                        <span class="qualification__subtitle">FIMA- Kenya</span>
+                        <span class="qualification__subtitle">FIMA Developers and Engineers Kenya</span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
                            2023 - present
