--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'am Ivy Njoroge</h1>
+                            <h1 class="home__title">Hi, I'm Ivy Njoroge</h1>
                             <h3 class="home__subtitle">Software Engineer</h3>
                             <p class="home__description">As a skilled software engineer with a passion for creating cutting-edge solutions, I specialize in designing, developing, and delivering high-quality software applications that meet the unique needs of businesses and individuals alike.</p>
                             <a href="#contact" class="button button--flex home__button">
